2008-01-28  Tor Lillqvist  <tml@novell.com>

	* modules/controller_dx_dinput.c: Make it compile again.

2008-01-28  Sven Neumann  <sven@gimp.org>

	* plug-ins/gimpressionist/gimp.c: minor cleanup.

2008-01-27  Michael Natterer  <mitch@gimp.org>

	* app/gegl/gimpcolorbalanceconfig.[ch]
	* app/gegl/gimpcolorizeconfig.[ch]
	* app/gegl/gimpcurvesconfig.[ch]
	* app/gegl/gimphuesaturationconfig.[ch]
	* app/gegl/gimplevelsconfig.[ch]
	* app/gegl/gimpposterizeconfig.[ch]
	* app/gegl/gimpthresholdconfig.[ch]: implement the GimpConfig
	interface and remove public reset() functions except special ones
	which reset only parts of the objects. Add lots of property
	notifications.

	* app/tools/gimpcolorbalancetool.c
	* app/tools/gimpcolorizetool.c
	* app/tools/gimpcurvestool.c
	* app/tools/gimphuesaturationtool.c
	* app/tools/gimplevelstool.c
	* app/tools/gimpposterizetool.c
	* app/tools/gimpthresholdtool.c: use gimp_config_reset(), misc.
	related changes and cleanups.

2008-01-27  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/imagemap/imap_cern.[ly]
	* plug-ins/imagemap/imap_csim.[ly]
	* plug-ins/imagemap/imap_ncsa.[ly]: Dynamically allocate space to
	hold comments, links, strings, and co-ordinate lists.
	Fixes bug #511072.

	* plug-ins/imagemap/imap_cern_lex.c
	* plug-ins/imagemap/imap_cern_parse.[ch]
	* plug-ins/imagemap/imap_csim_lex.c
	* plug-ins/imagemap/imap_csim_parse.[ch]
	* plug-ins/imagemap/imap_ncsa_lex.c
	* plug-ins/imagemap/imap_ncsa_parse.[ch]: Regenerated.

2008-01-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/gimpressionist/gimp.c (gimpressionist_main): transfer
	the pixels to the core on a tile-by-tile basis.

2008-01-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/gimpressionist/gimp.c (grabarea): changed code that
	retrieves the source drawable to iterate over the data tile-by-tile.
	Improves GIMPressionist startup time (bug #512126).

2008-01-26  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/pygimp-colors.c (pygimp_rgb_from_pyobject): no